# NordVPN-switcher

./: nordvpn_switch.py  pyproject.toml
nordvpn_switcher/: nordvpn_switch.py
