[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nordvpn-switcher"
version = "0.3.1"
description = "Rotate between different NordVPN servers with ease (Linux & Windows)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Cristian Consonni", email = "cristian@balist.es" },,
  { name = "Kristof Boghe" }
]
keywords = ["vpn", "nordvpn", "rotation", "scraping", "automation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Internet"
]

# Runtime dependencies (matching what pip pulls for the upstream wheel)
dependencies = [
  "psutil>=5.7",
  "bs4>=0.0.2",                 # meta-package that installs beautifulsoup4
  "requests>=2.25",
  "lxml>=4.9",
  "pathlib>=1.0.1",             # backport; unnecessary on modern Python but kept to mirror upstream
  "random-user-agent>=1.0.1"
]

[project.urls]
Homepage = "https://github.com/CristianCantoro/NordVPN-switcher"
Source = "https://github.com/CristianCantoro/NordVPN-switcher"
Upstream = "https://github.com/kboghe/NordVPN-switcher"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "examples*", "example*"]

# ---- Dev tooling (optional but handy) ----
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py38"
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
